# data_agent

./: README.md  main.py  pyproject.toml
app/agent/: context.py  graph.py  state.py
app/agent/api/: dependencies.py  lifespan.py
app/agent/api/routers/: query_router.py
app/agent/api/scheme/: query_scheme.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  validate_sql.py
app/clients/: embedding_client_manager.py  es_client_manager.py  llm.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py
app/core/: context.py  log.py
app/entities/: column_info.py  column_value_info.py  metric_info.py  table_info.py
app/models/: column_info_mysql.py  column_metric_mysql.py  metric_info_mysql.py  table_info_mysql.py
app/prompts_load/: prompts_load.py
app/repositories/es/: column_value_es_repository.py
app/repositories/mysql/dw_db/: dw_mysql_repository.py
app/repositories/mysql/meta_db/: meta_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_db.py
app/services/: meta_db_service.py  query_service.py
conf/: app_config_example.yaml  meta_config.yaml
prompts/: correct_sql.yaml  extend_keywords_for_column_recall.yaml  extend_keywords_for_metric_recall.yaml  extend_keywords_for_value_recall.yaml  filter_metric_info.yaml  filter_table_info.yaml  generate_sql.yaml
(+4 files in other folders)
